monitoria/mac323/4-2-33/grades/Victor-Matta_190874_assignsubmission_file_WordDAG.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
WordDAG.java:2: error: cannot find symbol
    IndexSET<String> words;
    ^
  symbol:   class IndexSET
  location: class WordDAG
WordDAG.java:3: error: cannot find symbol
    Digraph G;
    ^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:22: error: cannot find symbol
        words = new IndexSET<String>();
                    ^
  symbol:   class IndexSET
  location: class WordDAG
WordDAG.java:23: error: cannot find symbol
        G = new Digraph(strings.length);
                ^
  symbol:   class Digraph
  location: class WordDAG
4 errors
Second Compile Method
WordDAG.java:2: error: cannot find symbol
    IndexSET<String> words;
    ^
  symbol:   class IndexSET
  location: class WordDAG
WordDAG.java:3: error: cannot find symbol
    Digraph G;
    ^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:22: error: cannot find symbol
        words = new IndexSET<String>();
                    ^
  symbol:   class IndexSET
  location: class WordDAG
WordDAG.java:23: error: cannot find symbol
        G = new Digraph(strings.length);
                ^
  symbol:   class Digraph
  location: class WordDAG
4 errors
